results/SVCOMP/specgen/log-OverapproximationString01-2024_02_29_07_01_35.txt
public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures complete.equals("not possible") ==> true;
    //@ ensures !complete.equals("not possible") ==> false;
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: cannot find symbol
    //@ ensures complete.equals("not possible") ==> true;
                ^
  symbol:   variable complete
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: cannot find symbol
    //@ ensures !complete.equals("not possible") ==> false;
                 ^
  symbol:   variable complete
  location: class OverapproximationString01
2 errors

public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures complete.equals("not possible") ==> true;
    //@ ensures !complete.equals("not possible") ==> false;
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: cannot find symbol
    //@ ensures complete.equals("not possible") ==> true;
                ^
  symbol:   variable complete
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: cannot find symbol
    //@ ensures !complete.equals("not possible") ==> false;
                 ^
  symbol:   variable complete
  location: class OverapproximationString01
2 errors

public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures \result ==> (prefix + s).equals("not possible");
    //@ ensures !\result ==> !(prefix + s).equals("not possible");
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result ==> (prefix + s).equals("not possible");
                 ^
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: cannot find symbol
    //@ ensures \result ==> (prefix + s).equals("not possible");
                             ^
  symbol:   variable prefix
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures !\result ==> !(prefix + s).equals("not possible");
                  ^
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: cannot find symbol
    //@ ensures !\result ==> !(prefix + s).equals("not possible");
                               ^
  symbol:   variable prefix
  location: class OverapproximationString01
4 errors

public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures (prefix + s).equals("not possible") ==> true;
    //@ ensures !(prefix + s).equals("not possible") ==> false;
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: cannot find symbol
    //@ ensures (prefix + s).equals("not possible") ==> true;
                 ^
  symbol:   variable prefix
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: cannot find symbol
    //@ ensures !(prefix + s).equals("not possible") ==> false;
                  ^
  symbol:   variable prefix
  location: class OverapproximationString01
2 errors

public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures ("abc" + s).equals("not possible") ==> true;
    //@ ensures !("abc" + s).equals("not possible") ==> false;
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
